Improve header layout on small screens

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -50,7 +50,7 @@
 // @import '~kanbasu/src/scss/helpers/spacings-responsive';
 // @import '~kanbasu/src/scss/helpers/images';
 @import '~kanbasu/src/scss/helpers/positionning';
-// @import '~kanbasu/src/scss/helpers/display';
+@import '~kanbasu/src/scss/helpers/display';
 // @import '~kanbasu/src/scss/helpers/align';
 // @import '~kanbasu/src/scss/helpers/align-responsive';
 
