Move to Palanquin as body font

--- a/src/assets/scss/default/_typography.scss
+++ b/src/assets/scss/default/_typography.scss
@@ -6,3 +6,8 @@
   color: $alt-color-darker;
   font-family: 'Erica One', sans-serif;
 }
+
+a {
+  text-decoration-skip-ink: auto;
+  text-decoration-skip: ink;
+}
