Various styling improvements

--- a/src/assets/scss/default/_layout.scss
+++ b/src/assets/scss/default/_layout.scss
@@ -2,12 +2,17 @@
   LAYOUT
 \*----------------------------------------*/
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background-color: $background-color;
 }
 
 .master {
-  min-height: 100vh;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
 }
