--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -11,18 +11,11 @@
   font-weight: bold;
 }
 
-.btn--text-icon {
-  padding-left: 0.25em;
-  padding-right: 0.25em;
-
-  font-size: rem(40px);
-  line-height: 0.63em;
-}
-
 .btn--circle {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 0;
 
   width: 56px;
   height: 56px;
