--- a/src/assets/scss/default/_forms.scss
+++ b/src/assets/scss/default/_forms.scss
@@ -13,3 +13,40 @@
     box-shadow: 0 3px 12px rgba($alt-color, 0.5);
   }
 }
+
+.field--inline {
+  display: inline-block;
+  width: auto;
+}
+
+select.field {
+  appearance: none;
+  #{$padding-right}: 40px;
+  padding-top: 0;
+  padding-bottom: 0;
+
+  text-overflow: ellipsis;
+
+  background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%207%204%22%3E%3Cpath%20fill%3D%22%238f847e%22%20d%3D%22M3.5%2C4a.53.53%2C0%2C0%2C1-.37-.15l-3-3a.53.53%2C0%2C0%2C1%2C0-.74A.54.54%2C0%2C0%2C1%2C.9.15L3.5%2C2.74%2C6.1.15a.54.54%2C0%2C0%2C1%2C.75%2C0%2C.53.53%2C0%2C0%2C1%2C0%2C.74l-3%2C3A.53.53%2C0%2C0%2C1%2C3.5%2C4Z%22%2F%3E%3C%2Fsvg%3E');
+  background-repeat: no-repeat;
+  background-position: flip(calc(100% - 18px) center, 18px center);
+  background-size: 14px 8px;
+  cursor: pointer;
+
+  // Hide select arrow on IE/Edge
+  &::-ms-expand {
+    display: none;
+  }
+
+  // Remove dotted outline on Firefox
+  &:-moz-focusring {
+    color: transparent;
+    text-shadow: 0 0 0 #000;
+  }
+}
+
+.form-group ~ .form-group {
+  @include media('sm') {
+    margin-top: $spacing-unit-default;
+  }
+}
