--- a/src/assets/scss/default/_typography.scss
+++ b/src/assets/scss/default/_typography.scss
@@ -7,7 +7,15 @@
   font-family: 'Erica One', sans-serif;
 }
 
+h1 {
+  font-size: rem(30px);
+}
+
 a {
   text-decoration-skip-ink: auto;
   text-decoration-skip: ink;
+}
+
+abbr[title] {
+  text-decoration: none;
 }
