--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -28,7 +28,7 @@
 .btn__badge {
   display: block;
   min-width: 26px;
-  padding: 5px;
+  padding: 3px 5px 7px;
 
   position: absolute;
   top: -5px;
