--- a/src/assets/scss/settings/_settings.scss
+++ b/src/assets/scss/settings/_settings.scss
@@ -36,7 +36,7 @@ $quotes-colors: $color-green $color-blue $color-purple $color-red $color-orange
  * Typography
  */
 
-$font-family-default: Palanquin, serif;
+$font-family-default: 'proxima-nova', serif;
 
 $font-size-default: 18px;
 $font-size-small: 0.75rem;
