--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -76,5 +76,6 @@
 // @import '~kanbasu/src/scss/components/pusher';
 // @import '~kanbasu/src/scss/components/table-responsive';
 
+@import 'components/actions';
 @import 'components/btn';
 @import 'components/icon';
